# Magma

./: .gitignore  Magma_testingipynb.ipynb  README.md  pyproject.toml  train.py
agents/game_agent/: app.py
agents/libero/: README.md  eval_magma_libero.py  libero_magma_utils.py
agents/ui_agent/: app.py
agents/ui_agent/util/: utils.py
magma/: default_preprocessor_config.json  image_processing_magma.py  image_tower_magma.py  modeling_magma.py  processing_magma.py
scripts/: lmms_eval_magma.sh
