[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magma"
version = "0.0.1"
description = "The first foundation model for multimodal AI agents."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "transformers @ git+https://github.com/jwyang/transformers.git@dev/jwyang-v4.44.1",
    "tokenizers>=0.15.0",
    "sentencepiece==0.1.99",
    "shortuuid",
    "accelerate==0.27.2",
    "peft==0.4.0",
    "bitsandbytes==0.41.0",
    "pydantic<2,>=1",
    "markdown2[all]",
    "numpy",
    "scikit-learn==1.2.2",
    "gradio==3.35.2",
    "gradio_client==0.2.9",
    "requests",
    "httpx==0.24.0",
    "uvicorn",
    "fastapi",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==0.9.12",
    "tensorflow==2.15.0",
    "tensorflow_datasets==4.9.3",
    "tensorflow_graphics==2021.12.3",    
    "draccus",    
    "pyav",
    "numba", 
    "dlimp @ git+https://github.com/moojink/dlimp_openvla",
    "loguru", 
    "sacrebleu", 
    "evaluate", 
    "sqlitedict"
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb"]
eval = [
    "azure-ai-ml",
    "datasets",
    "fire",
    "openai==1.8.0",
    "opencv-python",
    "openpyxl==3.1.2",
    "pillow==9.4.0",
    "python-Levenshtein",
    "rich",
    "streamlit==1.29.0",
    "typer[all]",
    "word2number",
]

[tool.setuptools.packages.find]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "azureblobs*",
    "azure*"
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "azureblobs*",
    "azure*"    
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pyright]
exclude = [
    "**/__pycache__",
    "playground",
    "_results",
    "_data",
    "models",
    "checkpoints",
    "wandb",
    "docs",
]
